Fix login/register page styling on small screens

--- a/assets/sass/_config.scss
+++ b/assets/sass/_config.scss
@@ -1,7 +1,12 @@
 // TODO: Figure out better values for breakpoints
 $breakpoint-small: 400px !default;
+$breakpoint-side-by-side: 760px !default;
 $breakpoint-full: 970px !default;
 $breakpoint-max-width: 800px !default;
+
+$sidebar-item-indent: 0.3rem;
+$sidebar-item-dialog-indent: 0.6rem;
+$sidebar-item-icon-width: 1.8rem;
 
 :root {
   --body-bg: #f8f9f8;
