--- a/assets/sass/components/_sidebar.scss
+++ b/assets/sass/components/_sidebar.scss
@@ -1,7 +1,3 @@
-$sidebar-item-indent: 0.3rem;
-$sidebar-item-dialog-indent: 0.6rem;
-$sidebar-item-icon-width: 1.8rem;
-
 .sidebar-wrapper {
   background: var(--sidebar-bg);
   padding: 0 var(--gutter);
@@ -27,7 +23,7 @@ $sidebar-item-icon-width: 1.8rem;
     padding-right: calc(var(--gutter) * 2);
   }
 
-  @include if_screen("<=full") {
+  @include if_screen("<=side-by-side") {
     width: 0;
     max-width: var(--sidebar-width);
     top: 2.6rem; // TODO: Should be a dynamic value
@@ -45,23 +41,6 @@ $sidebar-item-icon-width: 1.8rem;
       width: 100vw;
       transform: translateX(0);
     }
-  }
-}
-
-.sidebar {
-  &.is-chatting {
-    h1 {
-      margin: 0;
-      margin-bottom: var(--gutter-small);
-    }
-  }
-
-  &.is-logged-out {
-    font-size: 1.1rem;
-    padding: var(--gutter-big);
-    position: absolute;
-    bottom: 0;
-    left: 0;
   }
 }
 
@@ -92,15 +71,6 @@ $sidebar-item-icon-width: 1.8rem;
     }
   }
 
-  &.is-filtering {
-    a.has-path {
-      background: transparent;
-    }
-    a.has-focus {
-      background: var(--sidebar-search-focus-bg);
-    }
-  }
-
   h3 {
     font-size: 0.9rem;
     font-weight: normal;
@@ -108,56 +78,6 @@ $sidebar-item-icon-width: 1.8rem;
     margin-bottom: 0.3rem;
     margin-top: var(--gutter);
   }
-}
-
-.sidebar__item {
-  position: relative;
-
-  &.has-settings {
-    .sidebar__item__link {
-      padding-left: $sidebar-item-icon-width + $sidebar-item-indent;
-    }
-
-    &:hover .sidebar__item__settings i:before {
-      content: fa-content($fa-var-ellipsis-h);
-    }
-  }
-
-  &.for-dialog {
-    .sidebar__item__link {
-      padding-left: $sidebar-item-icon-width + $sidebar-item-indent + $sidebar-item-dialog-indent;
-    }
-
-    .sidebar__item__settings {
-      left: $sidebar-item-dialog-indent;
-    }
-  }
-
-  .unread {
-    font-size: 0.9rem;
-    line-height: 0.9rem;
-    border-radius: 0.5em;
-    padding: 0.15em 0.4em;
-    position: absolute;
-    top: 0.4em;
-    right: 0.3em;
-  }
-}
-
-.sidebar__item__link {
-  i {
-    text-align: center;
-    width: $sidebar-item-icon-width;
-  }
-}
-
-.sidebar__item__settings {
-  text-align: center;
-  width: $sidebar-item-icon-width;
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: 1;
 }
 
 .sidebar__header {
